--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,8 @@ workflows:
     max_build_duration: 120
     environment:
       android_signing:
-        - android_keystore
+        - my-release-key
+
       groups:
         - google_play # <-- (Includes GCLOUD_SERVICE_ACCOUNT_CREDENTIALS)
       vars:
